src/kubernetes-app/wordpress/wordpress-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: wordpress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "/C=US/O=DigiCert Inc/OU=www.digicert.com/CN=RapidSSL TLS RSA CA G1"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "*.learn-data.dev"
    secretName: ingress-cert
  rules:
  - host: wordpress.learn-data.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port: 
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-redirect
  namespace: wordpress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "https://wordpress.learn-data.dev"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/cluster-issuer: "/C=US/O=DigiCert Inc/OU=www.digicert.com/CN=RapidSSL TLS RSA CA G1"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "*.learn-data.dev"
    secretName: ingress-cert
  rules:
  - host: home.learn-data.dev
    http:
      paths:
      - path: /wordpress
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port: 
              number: 80
